# bootdev_static_site_generator

./: .gitignore  pyproject.toml
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: blocknode.py  htmlnode.py  leafnode.py  main.py  parentnode.py  textnode.py  utils.py
tests/: blockquote.html  test_blocknode.py  test_end_to_end.py  test_htmlnode.py  test_leafnode.py  test_parentnode.py  test_textnode.py
